--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Número de Partidas: Melhor de
 Your browser does not support the HTML5 canvas tag.</canvas>-->
 </div>
 
-<script type="text/javascript" src="script2.js" ></script>
+<script type="text/javascript" src="script.js" ></script>
 <script>
 </body>
 </html>
